# discord-bot-template

./: .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
.github/: dependabot.yaml
.github/workflows/: docker-build-push.yaml  python-ci.yaml
bot/: __init__.py  __main__.py  bot.py  constants.py  log.py
bot/exts/: latency.py
bot/tests/: test_smoke.py
bot/utils/: exts.py
