[tool.poetry]
name = "bot"
version = "0.1.0"
description = "discord.py bot template"
authors = ["Robin5605 <robinjefferson123@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydantic-settings = "^2.4.0"
discord-py = "^2.4.0"
aiohttp = "^3.9.5"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
ruff = "^0.4.8"
pre-commit = "^3.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.ruff]
line-length = 120
